Fix some spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@ a:focus {
 .nav-btn a {
   color: #3d3d3d;
   text-decoration: none;
-  margin: 0 2em;
+  margin-right: 2em;
 }
 
 h1, h2, h3, h4, .karla {
