--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -79,6 +79,7 @@
   margin-left: auto;
   margin-right: auto;
   width: 75%;
+  height: 100%;
 }
 
 .img-50 {
@@ -86,6 +87,7 @@
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+  height: 100%;
 }
 
 .img-25 {
@@ -93,6 +95,7 @@
   margin-left: auto;
   margin-right: auto;
   width: 25%;
+  height: 100%;
 }
 
 .pad-left-mobile {
